--- a/static/alert/Dust.html
+++ b/static/alert/Dust.html
@@ -14,7 +14,7 @@
 		.all-wrapper
 		{
 			width: 420px;
-			max-height: 450px;
+			/*max-height: 450px;*/
 			margin: 0 auto;
 			background: #FFFFFF;
 			border: 1px solid rgba(0,0,0,0.2);
@@ -142,8 +142,8 @@
 			<div class="company-name">霸州名堂温泉水疗养生度假村有限公司分公司</div>
 			<span class="line"></span>
 			<div class="table-wrapper">
-				<table class="table-up">
-				<tr>
+				<table class="table-up" id="insert1">
+				<!--<tr>
 					<td>工地地址</td>
 					<td colspan="3">具体地址</td>
 				</tr>
@@ -162,8 +162,8 @@
 					<td>张川</td>
 					<td>网格员联络电话</td>
 					<td>188888888</td>
-				</tr>
-				<tr>
+				</tr>-->
+				<!--<tr>
 					<td>占地面积</td>
 					<td></td>
 					<td>工程进度</td>
@@ -174,7 +174,7 @@
 					<td></td>
 					<td>防尘效率</td>
 					<td></td>
-				</tr>
+				</tr>-->
 			</table>
 			</div>
 			
@@ -221,5 +221,31 @@
 			$(this).parent().parent().next().slideDown()
 		})
 	});
-
+	
+	function GetQueryString(name)
+            {
+                var reg = new RegExp("(^|&)"+ name +"=([^&]*)(&|$)");
+                var r = window.location.search.substr(1).match(reg);
+                if(r!=null)return  decodeURIComponent(r[2]); return null;
+            }
+     var polcode = GetQueryString('polcode');
+	$.ajax({
+		type:"get",
+	url:"http://10.6.80.93:8080/servicePlatform/enterprise/infoByPolcode?polcode="+polcode+"&sourceType=ps004",
+		async:true,
+		success:function(res){
+			var all2=JSON.parse(res);
+		
+		console.log(all2.ExtraData)
+		var all=all2.ExtraData
+		var content1="";
+		content1+="<tr><td>地址</td><td colspan='3'>"+all.province+all.city+all.area+"</td></tr>"+
+			"<tr><td>联系人</td><td>"+all.legalpersoname+"</td><td>电话</td><td>"+all.legalpersontel+"</td></tr>"+
+			"<tr><td>所属网格</td><td colspan='3'>"+all.gridname+"</td></tr>"+
+			"<tr><td>网格员</td><td>"+all.person+"</td><td>网格员联络电话</td><td>"+all.legalpersontel+"</td></tr>"+
+			"<tr><td>占地面积</td><td></td><td>工程进度</td><td></td></tr>"+
+			"<tr><td>防尘措施</td><td></td><td>防尘效率</td><td></td></tr>"
+			$("#insert1").html(content1)
+		}
+	});
 </script>
