--- a/static/alert/carRepair.html
+++ b/static/alert/carRepair.html
@@ -14,7 +14,7 @@
 		.all-wrapper
 		{
 			width: 420px;
-			max-height: 450px;
+			/*max-height: 450px;*/
 			margin: 0 auto;
 			background: #FFFFFF;
 			border: 1px solid rgba(0,0,0,0.2);
@@ -75,8 +75,8 @@
 		<div class="all-wrapper">
 			<div class="company-name">汽修店名称</div>
 			<div class="table-wrapper">
-				<table class="table-up">
-				<tr>
+				<table class="table-up" id="insert1">
+				<!--<tr>
 					<td>地址</td>
 					<td colspan="3">具体地址</td>
 				</tr>
@@ -95,8 +95,8 @@
 					<td>张川</td>
 					<td>网格员联络电话</td>
 					<td>188888888</td>
-				</tr>
-				<tr>
+				</tr>-->
+				<!--<tr>
 					<td>喷烘两用房个数</td>
 					<td colspan="3"></td>
 				</tr>
@@ -117,9 +117,42 @@
 				<tr>
 					<td>VOSc排放量</td>
 					<td colspan="3">434324<span style="color: #666666; float: right; margin-right: 5px;">(吨/年)</span></td>
-				</tr>
+				</tr>-->
 			</table>
 			</div>
 		</div>
 	</body>
 </html>
+<script src="../js/jquery.min.js"></script>
+<script>
+	function GetQueryString(name)
+            {
+                var reg = new RegExp("(^|&)"+ name +"=([^&]*)(&|$)");
+                var r = window.location.search.substr(1).match(reg);
+                if(r!=null)return  decodeURIComponent(r[2]); return null;
+            }
+     var polcode = GetQueryString('polcode');
+     
+		$.ajax({
+		type:"get",
+	url:"http://10.6.80.93:8080/servicePlatform/enterprise/infoByPolcode?polcode="+polcode+"&sourceType=ps003",
+		async:true,
+		success:function(res){
+			var all2=JSON.parse(res);
+		
+		console.log(all2.ExtraData)
+		var all=all2.ExtraData
+		var content1="";
+		content1+="<tr><td>地址</td><td colspan='3'>"+all.province+all.city+all.area+"</td></tr>"+
+			"<tr><td>联系人</td><td>"+all.legalpersoname+"</td><td>电话</td><td>"+all.legalpersontel+"</td></tr>"+
+			"<tr><td>所属网格</td><td colspan='3'>"+all.gridname+"</td></tr>"+
+			"<tr><td>网格员</td><td>"+all.person+"</td><td>网格员联络电话</td><td>"+all.legalpersontel+"</td></tr>"+
+			"<tr><td>喷烘两用房个数</td><td colspan='3'></td></tr>"+
+			"<tr><td>废弃处理方式</td><td></td><td>废弃处理效率</td><td></td></tr>"+
+			"<tr><td>溶剂性质</td><td colspan='3'></td></tr>"+
+			"<tr><td>溶剂使用量</td><td colspan='3'></td></tr>"+
+			"<tr><td>VOSc排放量</td><td colspan='3'>434324<span style='color: #666666; float: right; margin-right: 5px;'>(吨/年)</span></td></tr>"
+			$("#insert1").html(content1)
+		}
+	});
+</script>
