--- a/static/alert3/three.html
+++ b/static/alert3/three.html
@@ -14,7 +14,7 @@
 		
 		.all-wrapper {
 			width: 420px;
-			max-height: 450px;
+			/*max-height: 450px;*/
 			overflow: auto;
 			margin: 0 auto;
 			background: #FFFFFF;
@@ -147,7 +147,7 @@
 			$("#insert").html(re)
 			var re2 = "";
 		re2+="<tr><td>网格编号</td><td>" + all2.GridCode + "</td><td>区域名称</td><td>"+all2.GridName+"</td></tr>" +
-					"<tr><td>三级网格查询员</td><td>" +  all2.ThirdGridMemberCount + "</td></tr>" ;
+					"<tr><td>三级网格巡查员</td><td>" +  all2.ThirdGridMemberCount + "</td></tr>" ;
 			$("#insert1").html(re2)
 			
 		}
