--- a/static/alert/Restaurant.html
+++ b/static/alert/Restaurant.html
@@ -18,7 +18,7 @@
 			margin: 0 auto;
 			background: #FFFFFF;
 			border: 1px solid rgba(0,0,0,0.2);
-			box-shadow: 1px 3px 4px rgba(0,0,0,0.18);
+			/*box-shadow: 1px 3px 4px rgba(0,0,0,0.18);*/
 			border-radius: 2px;
 			/*padding: 0 20px;*/
 		}
