--- a/static/video/video.html
+++ b/static/video/video.html
@@ -133,7 +133,7 @@
                 $.ajax({
                     type: "GET",
                     dataType : "json",
-                    url: 'http://10.6.80.93:8063/api/Video/GetVideoScatterInfo?name='+decodeURI(name),
+                    url: 'http://gkpt.zq12369.com:8016/api/Video/GetVideoScatterInfo?name='+decodeURI(name),
                     success: function (data) {
                         console.log('获取成功')
                         var textdata = data.ExtraData;
