表格内容居左

--- a/static/alert/carRepair.html
+++ b/static/alert/carRepair.html
@@ -55,7 +55,7 @@
 		}
 		.table-up td:nth-child(odd)
 		{
-			text-align: center;
+			/*text-align: center;*/
 			background: #EDEDED;
 			color: #666666;
 			width: 93px;
@@ -63,12 +63,15 @@
 		.table-up td:nth-child(even)
 		{
 			width: 98px;
-			text-align: left;
+			/*text-align: left;*/
 			padding-left: 10px;
 			color: #333333;
 		}
 		
-		
+		td{
+			text-align: left;
+			padding-left: 10px;
+		}
 	</style>
 	
 	<body>
