--- a/static/alert/enterprise.html
+++ b/static/alert/enterprise.html
@@ -57,7 +57,7 @@
 		}
 		.table-up td:nth-child(odd)
 		{
-			text-align: center;
+			/*text-align: center;*/
 			background: #EBEBEB;
 			color: #666666;
 			width: 93px;
@@ -65,7 +65,7 @@
 		.table-up td:nth-child(even)
 		{
 			width: 98px;
-			text-align: left;
+			/*text-align: left;*/
 			padding-left: 10px;
 			color: #333333;
 		}
@@ -113,13 +113,13 @@
 		}
 		.table-down td:nth-child(odd)
 		{
-			text-align: center;
+			/*text-align: center;*/
 			background: #EBEBEB;
 			color: #666666;
 		}
 		.table-down td:nth-child(even)
 		{
-			text-align: left;
+			/*text-align: left;*/
 			padding-left: 10px;
 			color: #333333;
 		}
@@ -170,13 +170,13 @@
 		.table-down2 td:nth-child(odd)
 		{
 			width: 30%;
-			text-align: center;
+			/*text-align: center;*/
 			background: #EBEBEB;
 			color: #666666;
 		}
 		.table-down2 td:nth-child(even)
 		{
-			text-align: left;
+			/*text-align: left;*/
 			padding-left: 10px;
 			color: #333333;
 		}
@@ -199,6 +199,10 @@
 			position: absolute;
 			right: 20px;
 			top: 0;
+		}
+		td{
+			text-align: left;
+			padding-left: 10px;
 		}
 	</style>
 	<body>
