--- a/static/alert/gasStation.html
+++ b/static/alert/gasStation.html
@@ -55,7 +55,7 @@
 		}
 		.table-up td:nth-child(odd)
 		{
-			text-align: center;
+			/*text-align: center;*/
 			background: #EDEDED;
 			color: #666666;
 			width: 93px;
@@ -63,7 +63,7 @@
 		.table-up td:nth-child(even)
 		{
 			width: 98px;
-			text-align: left;
+			/*text-align: left;*/
 			padding-left: 10px;
 			color: #333333;
 		}
@@ -82,6 +82,10 @@
 			background: #2494F2;
 			color: white;
 			font-size: 14px;
+		}
+		td{
+			text-align: left;
+			padding-left: 10px;
 		}
 	</style>
 	
