--- a/static/alert/move.html
+++ b/static/alert/move.html
@@ -43,7 +43,7 @@
 		}
 		.table-up td:nth-child(odd)
 		{
-			text-align: center;
+			/*text-align: center;*/
 			background: #EBEBEB;
 			color: #666666;
 			width: 93px;
@@ -51,7 +51,7 @@
 		.table-up td:nth-child(even)
 		{
 			width: 98px;
-			text-align: left;
+			/*text-align: left;*/
 			padding-left: 10px;
 			color: #333333;
 		}
@@ -91,6 +91,10 @@
 			position: absolute;
 			right: 20px;
 			top: 0;
+		}
+		td{
+			text-align: left;
+			padding-left: 10px;
 		}
 	</style>
 	<body>
