--- a/static/alert/Dust.html
+++ b/static/alert/Dust.html
@@ -55,7 +55,7 @@
 		}
 		.table-up td:nth-child(odd)
 		{
-			text-align: center;
+			/*text-align: center;*/
 			background: #EDEDED;
 			color: #666666;
 			width: 93px;
@@ -63,7 +63,7 @@
 		.table-up td:nth-child(even)
 		{
 			width: 98px;
-			text-align: left;
+			/*text-align: left;*/
 			padding-left: 10px;
 			color: #333333;
 		}
@@ -135,6 +135,11 @@
 			position: absolute;
 			right: 20px;
 			top: 0;
+		}
+		
+		td{
+			text-align: left;
+			padding-left: 10px;
 		}
 	</style>
 	<body>
