--- a/static/alert/Restaurant.html
+++ b/static/alert/Restaurant.html
@@ -39,31 +39,6 @@
 		{
 			margin: 0px 20px 20px 20px;
 		}
-		/*.title
-		{
-			position: relative;
-			width: 100%;
-			height: auto;
-			padding: 10px 0px;
-			text-align: center;
-			border-bottom: 2px solid #1080CC;
-		}
-		.title-close
-		{
-			position: absolute;
-			right: 5px;
-			top: 50%;
-			margin-top: -8px;
-			width: 16px;
-			height: 16px;
-			display: inline-block;
-			vertical-align: middle;
-			background-image: url(iclose.png);
-			background-size: 100%;
-			background-repeat: no-repeat;
-			background-color: blue;
-			margin-right: 5px;
-		}*/
 		.table-up
 		{
 			width: 100%;
@@ -80,7 +55,7 @@
 		}
 		.table-up td:nth-child(odd)
 		{
-			text-align: center;
+			/*text-align: center;*/
 			background: #EDEDED;
 			color: #666666;
 			width: 93px;
@@ -88,7 +63,7 @@
 		.table-up td:nth-child(even)
 		{
 			width: 98px;
-			text-align: left;
+			/*text-align: left;*/
 			padding-left: 10px;
 			color: #333333;
 		}
@@ -160,6 +135,10 @@
 			position: absolute;
 			right: 20px;
 			top: 0;
+		}
+		td{
+			text-align: left;
+			padding-left: 10px;
 		}
 	</style>
 	<body>
