--- a/static/alert/dryClean.html
+++ b/static/alert/dryClean.html
@@ -56,7 +56,7 @@
 		}
 		.table-up td:nth-child(odd)
 		{
-			text-align: center;
+			/*text-align: center;*/
 			background: #EDEDED;
 			color: #666666;
 			/*width: 93px;*/
@@ -64,7 +64,7 @@
 		.table-up td:nth-child(even)
 		{
 			/*width: 98px;*/
-			text-align: left;
+			/*text-align: left;*/
 			padding-left: 10px;
 			color: #333333;
 		}
@@ -84,7 +84,10 @@
 			font-size: 12px;
 			color: #666666;
 		}
-		
+		td{
+			text-align: left;
+			padding-left: 10px;
+		}
 	</style>
 	<body>
 		<div class="all-wrapper">
