--- a/static/alert3/one.html
+++ b/static/alert3/one.html
@@ -55,7 +55,7 @@
 		}
 		
 		.table-up td:nth-child(odd) {
-			text-align: center;
+			/*text-align: center;*/
 			background: #EBEBEB;
 			color: #666666;
 			width: 93px;
@@ -63,7 +63,7 @@
 		
 		.table-up td:nth-child(even) {
 			width: 98px;
-			text-align: left;
+			/*text-align: left;*/
 			padding-left: 10px;
 			color: #333333;
 		}
@@ -81,6 +81,10 @@
 		
 		.msg-type:nth-child(1) {
 			margin-top: 10px;
+		}
+		td{
+			text-align: left;
+			padding-left: 10px;
 		}
 	</style>
 
