--- a/static/alert/enterprise.html
+++ b/static/alert/enterprise.html
@@ -19,7 +19,7 @@
 			/*overflow-y: scroll;*/
 			margin: 0 auto;
 			background: #FFFFFF;
-			border: 1px solid rgba(0,0,0,0.2);
+			/*border: 1px solid rgba(0,0,0,0.2);*/
 			/*box-shadow: 1px 3px 4px rgba(0,0,0,0.18);*/
 			border-radius: 2px;
 			/*padding: 0 15px;*/
